Updated page Fix scroll content alignment

--- a/css/styles/page.scss
+++ b/css/styles/page.scss
@@ -37,6 +37,7 @@ title
 	height: 100%;
 	-ms-overflow-style: none;
 	scrollbar-width: none;
+	display: block;
 }
 
 .page-content-scroll::-webkit-scrollbar {
